# wmaug-appsync-demo

./: .gitignore  README.md  app.py  cdk.context.json  hello.py  pyproject.toml
presentation/: slides.md
scripts/: seed_data.py
services/frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  schema.json
services/frontend/src/: aws-exports.ts
services/frontend/src/app/: layout.tsx  page.tsx
services/frontend/src/app/product/[sku]/: page.tsx
services/frontend/src/graphql/: config.ts  mutations.ts  queries.ts
services/frontend/src/types/: graphql.ts
services/inventory/: README.md  app.py
services/inventory/infrastructure/: inventory_stack.py  schema.graphql
services/inventory/infrastructure/resolvers/: auth_function.js  get_product_inventory.js  update_inventory.js
services/inventory/src/auth_lambda/: infrastructure.py
services/inventory/src/auth_lambda/lambda_function/: app.py
services/merged_api/: README.md  app.py
services/merged_api/infrastructure/: merged_api.py
services/products/: README.md  app.py
services/products/infrastructure/: products_stack.py  schema.graphql
services/products/infrastructure/resolvers/: products_resolver.js
services/reviews/: README.md  app.py
services/reviews/infrastructure/: graphql_stack.py  rds_stack.py  schema.graphql
services/reviews/infrastructure/resolvers/: get_product_reviews.js
services/reviews/src/manage_database/: infrastructure.py
services/reviews/src/manage_database/lambda_function/: app.py
(+1 files in other folders)
